--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon --exec \"mocha -R min\"",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "start": "concurrently \"npm run server\" \"cd client && npm run start\""
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3"
