--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,23 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "esbuild-wasm": "^0.15.1",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "jest": "^28.1.3",
     "prettier": "^2.5.1",
     "vite": "^3.0.1"
+  },
+  "overrides": {
+    "esbuild": "npm:esbuild-wasm@latest"
   }
 }
