--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ PG_DATABASE = car_dealership
 PG_USERPASS = admin
 NODE_ENV = development
 SECRET_KEY = naevis
-JWT_SECRET = eyJhbGciOiJIUzI1NiJ9.eyJVc2VybmFtZSI6ImFkbWluIiwiZXhwIjoxNjYwMjk1OTgzfQ.FHN1XXppIOxDLlD9x5fI4eivUJM_NR8bY5G3eVrlSU4
+JWTSECRET = eyJhbGciOiJIUzI1NiJ9.eyJVc2VybmFtZSI6ImFkbWluIiwiZXhwIjoxNjYwMjk1OTgzfQ.FHN1XXppIOxDLlD9x5fI4eivUJM_NR8bY5G3eVrlSU4
