--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ PG_HOST = localhost
 PG_DATABASE = car_dealership
 PG_USERPASS = admin
 NODE_ENV = development
-SECRET_KEY = naevis
-JWTSECRET = 123
+
+SECRET_KEY = randomString
+# SECRET_KEY = naevis
+# JWTSECRET = 123
