--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "concurrently": "^7.3.0",
