added helmet; added db config options;

--- a/.env
+++ b/.env
@@ -1,10 +1,15 @@
+NODE_ENV = development
+
+# POSTGRES
 PORT = 3000
 PG_USER = postgres
 PG_HOST = localhost
-PG_DATABASE = car_dealership
 PG_USERPASS = admin
-NODE_ENV = development
+
+# DB
+PG_DEV_DB = car_dealership
+PG_TEST_DB = dealership_test
+PG_PROD_DB = dealership_prod
+
 
 SECRET_KEY = randomString
-# SECRET_KEY = naevis
-# JWTSECRET = 123
