fixed vue router

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nodemon --exec \"mocha -R min\"",
     "server": "nodemon server.js",
-    "start": "concurrently \"npm run server\" \"cd client && npm run start\""
+    "start": "concurrently \"npm run server\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
